Fixed dark mode

--- a/upsonic_on_prem/dash/static/css/dark_mode.css
+++ b/upsonic_on_prem/dash/static/css/dark_mode.css
@@ -66,7 +66,7 @@
   [data-bs-theme=dark] .custom_card_header_blue {
     color: #FFF;
   }
-  [data-bs-theme=dark] .custom_card_header_blue_big {
+  [data-bs-theme=dark] .custom_card_header_black_big {
     color: #FFF;
   }
 
